# db-manager-rs

./: .gitignore  README.md  package.json
mockups/: .$app.drawio.bkp  app.drawio
src/: app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/db/mysql/: connection.rs
src-tauri/src/handler/: invoke_handler.rs  mod.rs
src/lib/: greet.svelte  mysql-connect.svelte  mysqlConnect.svelte  utils.ts
src/lib/components/footer/: footer.svelte
src/lib/components/header/: header.svelte
src/lib/context/counter-context/: index.svelte
src/routes/: +layout.svelte  +page.svelte  Counter.svelte  styles.css
src/routes/about/: +page.svelte
src/routes/about/contact/: +page.svelte
src/routes/mui-example/accordion/: +page.svelte
src/routes/mui-example/treeview/: +page.svelte
src/store/: store.ts
tauri/: Cargo.toml  tauri.conf.json
tauri/src/: main.rs
tauri/src/config/: app_config.rs
tauri/src/db/mysql/: connection.rs
tauri/src/handler/: invoke_handler.rs
tauri/src/state/: app_state.rs
