[package]
name = "app"
version = "0.1.0"
description = "DB manager app built with Tauri and Sveltekit"
authors = ["Emir Buğra Köksalan <emir@rust.tc>"]
license = "GPL"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "std"] }
tauri = { version = "1.5", features = [ "window-hide", "window-unminimize", "window-unmaximize", "window-close", "window-minimize", "window-show", "window-start-dragging", "window-maximize"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "mysql",
    "macros",
    "uuid",
    "time",
    "bigdecimal",
    "json",
    "ipnetwork",
] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
anyhow = "1"
clap = "4.4"
config = "0.13"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
